# galapagos3

./: .gitignore  BACKEND.md  BREADCRUMB.md  CLAUDE.md  Cargo.toml  MUTATION_CONTROLS.md  PHASE_ZERO.md  README.md  SKELETON.md  TILE_RENDER.md  ZERO_AND_SOLID_COLOR_PROBLEMS.md  bootstrap.ps1  bootstrap.sh  build.rs  run-gui.sh  run-widget.sh
docs/: expression-generation.md  genome-explainer.html  index.html  node-display-tester.html
examples/: test_crc.rs
output/: 0000000001775707639.txt  0000000001775708067.txt  0000000001775708256_000.txt  0000000001775708260_000.txt  0000000001775708260_001.txt  0000000001775708260_002.txt  0000000001775708260_003.txt  0000000001775708260_004.txt  0000000001775708260_005.txt  0000000001775708260_006.txt  0000000001775708260_007.txt  0000000001775708260_008.txt  0000000001775708260_009.txt  0000000001775708260_010.txt  0000000001775708260_011.txt  0000000001775708260_012.txt  0000000001775708260_013.txt  0000000001775708260_014.txt  0000000001775708260_015.txt  0000000001775708732_000.txt  0000000001775708732_001.txt  0000000001775708732_002.txt  0000000001775708732_003.txt  0000000001775708732_004.txt  0000000001775708732_005.txt  0000000001775708732_006.txt  0000000001775708732_007.txt  0000000001775708732_008.txt  0000000001775708732_009.txt  0000000001775708732_010.txt  0000000001775708732_011.txt  0000000001775708732_012.txt  0000000001775708732_013.txt  0000000001775708732_014.txt  0000000001775708732_015.txt  0000000001775708760_000.txt  0000000001775708760_001.txt  0000000001775708760_002.txt  0000000001775708760_003.txt  (+92 more)
(+26 files in other folders)
