[package]
name = "galapagos3"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "galapagos3"
path = "src/main.rs"

[[bin]]
name = "test_gpu"
path = "src/bin/test_gpu.rs"

[dependencies]
rand = "0.8"
image = "0.24"
minifb = "0.27"
wgpu = "0.19"
bytemuck = { version = "1.16", features = ["derive"] }
futures-channel = "0.3"
tokio = { version = "1", features = ["full"] }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
