[package]
name = "galapagos3"
version = "0.1.0"
edition = "2021"
description = "GPU-accelerated evolutionary art generator — breeds mathematical expression trees into 2K images through human selection"
authors = ["kleer001"]
repository = "https://github.com/kleer001/galapagos3"
license = "MIT"

[[bin]]
name = "galapagos3"
path = "src/main.rs"

[dependencies]
rand = "0.8"
image = "0.24"
wgpu = { version = "29.0.1", default-features = false, features = ["std", "wgsl", "vulkan", "metal", "dx12"] }
bytemuck = { version = "1.16", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
eframe = { version = "0.34", features = ["wgpu"] }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
